// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword component Renders error message 1`] = `
<div
  className="mobile-size-container"
>
  <form
    className="was-validated"
    noValidate={true}
    onSubmit={[Function]}
  >
    <h2>
      forgot-password-title
    </h2>
    <div>
      forgot-password-email-not-sent
    </div>
    forgot-password-try-again-label
    <button
      className="px-0 btn btn-link"
      onClick={[Function]}
    >
      forgot-password-try-again
    </button>
  </form>
</div>
`;

exports[`ForgotPassword component Renders forgot password 1`] = `
<div
  className="mobile-size-container"
>
  <form
    className=""
    noValidate={true}
    onSubmit={[Function]}
  >
    <h2>
      forgot-password-title
    </h2>
    <div
      className="mb-3"
    >
      <label
        htmlFor="user-form-email"
      >
        user-form-email
      </label>
      <input
        className="form-control"
        id="user-form-email"
        onChange={[Function]}
        required={true}
        value=""
      />
      <div
        className="invalid-feedback"
      >
        user-form-email-validation
      </div>
      <hr
        className="mb-4"
      />
      <button
        className="btn btn-primary btn-lg btn-block"
        type="submit"
      >
        forgot-password-forgot-password
      </button>
    </div>
  </form>
</div>
`;

exports[`ForgotPassword component Renders send again message 1`] = `
<div
  className="mobile-size-container"
>
  <form
    className="was-validated"
    noValidate={true}
    onSubmit={[Function]}
  >
    <h2>
      forgot-password-title
    </h2>
    <div>
      forgot-password-email-sent-message
    </div>
    forgot-password-try-again-label
    <button
      className="px-0 btn btn-link"
      onClick={[Function]}
    >
      forgot-password-try-again
    </button>
  </form>
</div>
`;
